<resources>
    <string name="app_name">Insta-Fit</string>
    <string-array name="feet">
        <item>---</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="inches">
        <item>---</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="welcome">Welcome to the Insta-Fit! Using this application, you will be able to keep track of your daily activities like walking,
        jogging, sitting, standing, walking upstairs and walking downstairs. Make to sure to have the phone in your front pocket so as not to
        adversely affect recognition accuracy. </string>
    <string name="description1">This android application can track the daily activities of a person such as walking , jogging and running .
        After that the system will measure and calculate the number of steps per day and will assign the person new targets.</string>
    <string name="description2">Insta-Fit will assign the user step challenges starting from basic runner.User will then activate the challenges.
        Application will track and calculate the number of footsteps of a person and provide the fitness goals and new targets to a person that he/she will have
        to achieve for his desired fitness. After achieving every target, the user will be provided with the achievement points(or coins) and the next target.
    </string>
    <string name="button">\nPress on the start button below to start monitoring your fitness. Pressing the button means that the application will
        begin gathering data from the accelerometer (even in background). Press stop to stop.
        It is recommended that you press start after you wake up and press stop before you go to bed every day.\n</string>
    <string name="morebtn">\nPress on the TABLE button below to view activities and their corresponding confidence in real-time. Similarly, press
        on the STATISTICS button to view your fitness statistics over different periods of time.\n</string>
    <string name="stats">Statistics</string>
    <string name="table">Table</string>
    <string name="disclaimer">\nDisclaimer: This application has only been tested on Nexus 5X API 21. The creator of this application cannot be held liable for any harm caused to your device during the use of this application.</string>
    <string name="title_activity_user_dash_board">UserDashBoard</string>
    <string name="action_settings">Settings</string>

    <string name="record">Day record: %1$d steps</string>
    <string name="title">Step Counter</string>
    <string name="steps_label">Steps taken:</string>
    <string name="steps">%1$d</string>
    <string name="time">Time: %1$s</string>
    <string name="speed">Average speed: %1$d steps/min</string>
    <string name="distance">Distance: %1$s m</string>
    <string name="orientation">Orientation: %1$s</string>
    <string name="settings">Settings</string>
    <string name="start">START!</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="achieved">Record Achieved Successfully!!</string>

</resources>
