<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutApp"
    android:background="@drawable/run5"
    android:backgroundTint="#AEF4FA"
    android:backgroundTintMode="src_over"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/welcomeUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="All About Insta-Fit"
            android:textStyle="bold"
            android:textFontWeight="2"
            android:textSize="20sp"
            android:textColor="@color/active_dot"
            android:textAlignment="center"
            android:gravity="center_horizontal"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <ImageView
            android:id="@+id/titleImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cropToPadding="true"
            android:scaleType="fitCenter"
            android:src="@drawable/backgroundsplash"
            android:foregroundGravity="center"
            android:layout_centerInParent="true" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description1"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description2"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
</LinearLayout>